# NexusFix

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md  start.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  aeron_ipc_bench.cpp  batch_submit_bench.cpp  constexpr_serializer_bench.cpp  cpu_affinity_bench.cpp  deferred_processor_bench.cpp  error_message_bench.cpp  field_types_bench.cpp  fix_version_bench.cpp  hash_map_bench.cpp  highway_comparison_bench.cpp  io_uring_defer_taskrun_bench  io_uring_defer_taskrun_bench.cpp  io_uring_transport_integration_bench.cpp  market_data_types_bench.cpp  message_store_pmr_bench.cpp  mimalloc_bench.cpp  mpmc_queue_bench.cpp  mpsc_queue_bench.cpp  msgtype_dispatch_bench.cpp  multishot_recv_bench.cpp  optimization_summary_bench.cpp  parse_benchmark.cpp  phase2_utils_bench.cpp  ranges_utils_bench.cpp  registered_buffers_bench.cpp  sbe_benchmark.cpp  session_benchmark.cpp  session_heap_isolation_bench.cpp  session_state_bench.cpp  simd_checksum_bench.cpp  simd_scanner_bench  simd_scanner_bench.cpp  structural_index_bench.cpp  tag_metadata_bench.cpp  thread_local_pool_bench.cpp  timing_comparison.cpp
benchmarks/include/: benchmark_utils.hpp  perf_counters.hpp
benchmarks/vs_quickfix/: CMakeLists.txt  quickfix_only_benchmark.cpp
cmake/: nexusfixConfig.cmake.in
docs/: API_QUICK_START_CN.md  API_QUICK_START_EN.md  API_REFERENCE.md  TICKET_174_CPP_BENCHMARK_FRAMEWORK.md  TICKET_175_CPP_OPTIMIZATION_ROADMAP.md  cpp11_vs_cpp23_performance.md  modernc_quant.md  optimization_diary.md
docs/compare/: ABSEIL_FLAT_HASH_MAP_BENCHMARK.md  AVX512_SIMD_SCANNER_BENCHMARK.md  BENCHMARK_COMPARISON_REPORT.md  CPP23_CONSTRUCT_AT_BENCHMARK.md  CPP23_TECHNIQUES_BENCHMARK.md  CPU_AFFINITY_BENCHMARK.md  DEFERRED_PROCESSOR_BENCHMARK.md  DEFER_TASKRUN_BENCHMARK.md  FIX44_VS_FIX50_COMPARISON.md  FIX8_VS_NEXUSFIX_BENCHMARK.md  NEXUSFIX_INVESTIGATION_REPORT.md  NEXUSFIX_OPTIMIZATION_BEFORE_AFTER.md  OPTIMIZATION_SUMMARY_BEFORE_AFTER.md  OPTIMIZED_BENCHMARK_COMPARISON.md  PMR_MESSAGE_STORE_BENCHMARK.md  SBE_BINARY_ENCODING_BENCHMARK.md  TICKET_008_IMPLEMENTATION_REPORT.md  TICKET_021_PHASE2_UTILS_BENCHMARK.md  TICKET_022_MSGTYPE_DISPATCH_BENCHMARK.md  TICKET_023_ERROR_MESSAGE_BENCHMARK.md  TICKET_023_FIELD_TYPES_BENCHMARK.md  TICKET_023_FIX_VERSION_BENCHMARK.md  TICKET_023_MARKET_DATA_TYPES_BENCHMARK.md  TICKET_023_SESSION_STATE_BENCHMARK.md  TICKET_023_TAG_METADATA_BENCHMARK.md  TICKET_024_PHASE1_BENCHMARK.md  TICKET_024_PHASE2_BENCHMARK.md  TICKET_024_PHASE3_BENCHMARK.md  TICKET_024_PHASE567_BENCHMARK.md  TICKET_024_PHASE5_BENCHMARK.md  TICKET_200_HIGHWAY_BASELINE.md  TICKET_200_HIGHWAY_BEFORE_AFTER.md  TICKET_202_MPSC_QUEUE_BENCHMARK.md  TICKET_204_AERON_IPC_BENCHMARK.md  TICKET_208_STRUCTURAL_INDEX.md  TICKET_210_MIMALLOC_BEFORE_AFTER.md
docs/design/: IMPLEMENTATION_GUIDE.md  RESEARCH_SUMMARY_PERFORMANCE_LIBRARIES.md  TICKET_001_MODULAR_ARCHITECTURE.md  TICKET_002_IMPLEMENTATION_PLAN.md  TICKET_003_BENCHMARK_FRAMEWORK.md  TICKET_004_QUICKFIX_COMPARISON_BENCHMARK.md  TICKET_005_NEXUSFIX_IMPLEMENTATION_SUMMARY.md  TICKET_006_FIX50_IMPLEMENTATION.md  TICKET_007_MARKET_DATA_SUPPORT.md  TICKET_008_HARDWARE_OPTIMIZATION_ROADMAP.md  TICKET_022_COMPILE_TIME_MSGTYPE_DISPATCH.md  TICKET_023_COMPILE_TIME_OPTIMIZATION_ROADMAP.md  TICKET_024_CPP23_FEATURE_ADOPTION.md
examples/: CMakeLists.txt  simple_client.cpp
include/nexusfix/: nexusfix.hpp
include/nexusfix/interfaces/: i_message.hpp
include/nexusfix/memory/: buffer_pool.hpp  huge_page_allocator.hpp  mimalloc_resource.hpp  mpmc_queue.hpp  mpsc_queue.hpp  object_pool.hpp  seqlock.hpp  spsc_queue.hpp  wait_strategy.hpp
include/nexusfix/messages/common/: header.hpp  trailer.hpp
include/nexusfix/messages/fix44/: execution_report.hpp  heartbeat.hpp  logon.hpp  market_data.hpp  new_order_single.hpp
include/nexusfix/messages/fix50/: execution_report.hpp  fix50.hpp  new_order_single.hpp
include/nexusfix/messages/fixt11/: fixt11.hpp  logon.hpp  session.hpp
include/nexusfix/parser/: consteval_parser.hpp  field_view.hpp  highway_checksum.hpp  highway_scanner.hpp  repeating_group.hpp  runtime_parser.hpp  simd_checksum.hpp  simd_scanner.hpp  structural_index.hpp
include/nexusfix/platform/: error_mapping.hpp  platform.hpp
include/nexusfix/sbe/: message_header.hpp  sbe.hpp
include/nexusfix/sbe/codecs/: execution_report.hpp  new_order_single.hpp
include/nexusfix/sbe/types/: composite_types.hpp  sbe_types.hpp
include/nexusfix/serializer/: constexpr_serializer.hpp
include/nexusfix/session/: coroutine.hpp  sequence.hpp  session_handler.hpp  session_manager.hpp  state.hpp
include/nexusfix/store/: i_message_store.hpp  memory_message_store.hpp
include/nexusfix/transport/: batch_submitter.hpp  io_uring_transport.hpp  socket.hpp  tcp_transport.hpp
include/nexusfix/types/: error.hpp  field_types.hpp  fix_version.hpp  market_data_types.hpp  tag.hpp
include/nexusfix/util/: bit_utils.hpp  branch_hints.hpp  branchless.hpp  compiler.hpp  construct_utils.hpp  cpu_affinity.hpp  deferred_processor.hpp  diagnostic.hpp  fast_timestamp.hpp  format_utils.hpp  icache_warmer.hpp  logger.hpp  memory_lock.hpp  prefetch.hpp  ranges_utils.hpp  rdtsc_timestamp.hpp  string_hash.hpp  thread_local_pool.hpp
src/utils/: logdump.hpp
tests/: CMakeLists.txt  compile_test.cpp  platform_test.cpp  quickfix_compat.cpp  test_market_data.cpp  test_memory.cpp  test_mimalloc.cpp  test_parser.cpp  test_queues.cpp  test_sbe.cpp  test_types.cpp
